@@ -1,5 +1,7 @@
 2007-05-08  Eitan Isaacson  <eitan@ascender.com>
-
+	
+	* plugins/event_monitor.py: Made load time extremely faster.
+	
 	* src/accerciser.in: Always enable gail.
 	* src/lib/accerciser/accerciser.py: Changed no desktop a11y dialog
 	behavior (bug 429505).
